# rust-api-books

./: Cargo.toml  docker-compose.yml
migrations/2023-12-10-210450_create_books/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: book.rs
