[package]
name = "rust-api-books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features = ["serde"] }
